# nlp-katas

./: .gitignore  .ossignore  CLAUDE.md  README.md  todo.md
backend/rust-nlp-katas/: Cargo.toml  run.sh  todo.md
backend/rust-nlp-katas/content/phase-0/: 01-explore-ambiguity.md  02-identify-noise.md  03-structured-vs-unstructured.md
backend/rust-nlp-katas/content/phase-1/: 01-preprocessing-pipeline.md  02-stemming-vs-lemmatization.md  03-stopword-removal-similarity.md
backend/rust-nlp-katas/content/phase-10/: 01-pretraining-vs-finetuning.md  02-encoder-decoder-models.md  03-where-llms-fit.md
backend/rust-nlp-katas/content/phase-2/: 01-build-bow.md  02-visualize-document-vectors.md  03-compare-documents-bow.md
backend/rust-nlp-katas/content/phase-3/: 01-compute-tfidf.md  02-bow-vs-tfidf.md  03-visualize-word-importance.md
backend/rust-nlp-katas/content/phase-4/: 01-cosine-similarity.md  02-text-search-engine.md  03-cluster-documents.md
backend/rust-nlp-katas/content/phase-5/: 01-tokenization-methods.md  02-byte-pair-encoding.md  03-vocabulary-comparison.md
backend/rust-nlp-katas/content/phase-6/: 01-rule-based-ner.md  02-statistical-ner.md  03-ner-error-analysis.md
backend/rust-nlp-katas/content/phase-7/: 01-word-embeddings.md  02-visualize-embeddings.md  03-neural-vs-tfidf.md
backend/rust-nlp-katas/content/phase-8/: 01-word-order-matters.md  02-context-aware-representations.md  03-sequence-modeling-challenges.md
backend/rust-nlp-katas/helpers/: nlp_katas_viz.rs
backend/rust-nlp-katas/src/: config.rs  main.rs
frontend/: index.html  package.json  (+3 more)
(+107 files in other folders)
